# firebolt-nyc-demo

./: .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile.streamlit  Makefile  README.md  README_PRECACHING.md  check_status.sh  cleanup.sh  compare.sh  diagnostics.sh  docker-compose.yml  load_data.sh  pyproject.toml  requirements.txt  setup_core.sh  setup_production.sh  test_filters.py  test_precache_validation.py  test_validation_simple.sh  validate_precaching.sh  verify_production.sh
.github/workflows/: ci.yml
app/: streamlit_app.py
scripts/: download_dataset.py
sql/: 01_create_tables.sql  02_load_data.sql  03_create_indexes.sql
